<resources>
    <string name="app_name">Student Organizer</string>
    <string name="course_name">Android Mobile App Development</string>
    <string name="edit_course_name_buttonLabel">Edit</string>
    <string name="time_label">Time:</string>
    <string name="course_start_time_editText">7:30 PM</string>
    <string name="course_end_time_editText">9:00 PM</string>
    <string name="location_label">Location</string>
    <string name="course_location_editText">GH 250</string>
    <string name="tasks_label">Task List</string>
    <string name="course_task1_text">Project 1</string>
    <string name="course_task2_text">Lab 2</string>
    <string name="course_task3_text">Project 2</string>
    <string name="course_task4_text">Midterm 1</string>
    <string name="tasks_date_label">Due Date</string>
    <string name="course_task1_dateLabel">9/24/2017 – 11:59 PM</string>
    <string name="course_task2_dateLabel">10/1/2017 – 11:59 PM</string>
    <string name="course_task3_dateLabel">TBD</string>
    <string name="course_task4_dateLabel">TBD</string>

    <string name="event_type_text">Event Type</string>
    <string name="time_text">Time</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="course">Course</string>
    <string name="submit">Submit</string>
    <string-array name="types_array">
        <item>Select Type</item>
        <item>Course</item>
        <item>Task</item>
        <item>Reminder</item>
    </string-array>

    <string-array name="quick_access_array">
        <item>Today Feed</item>
        <item>My Courses</item>
<<<<<<< HEAD
        <!--<item>Reminders</item>
        <item>To Do List</item>-->
        <item>My Calendar</item>
    </string-array>
    <string name="title_activity_settings">settings</string>
    <string name="clear">Clear</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="deleteItem">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

<!-- Strings related to Settings -->
    <string name="menu_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_summary">Select various settings options</string>
    <string name="options_title">Choose Options</string>
    <string-array name="settings_keys">
        <item>Option 1</item>
        <item>Option 2</item>
    </string-array>
    <string-array name="settings_values">
        <item>0</item>
        <item>1</item>
    </string-array>
=======
        <item>My Schedule</item>
    </string-array>
    <string name="title_activity_settings">settings</string>
    <string name="course0">CSC 415</string>
    <string name="course1">CSC 201</string>
    <string name="course2">INF 286</string>
    <string name="course3">BIS 111</string>
    <string name="course4">MAT 385</string>
    <string name="current_date">November, 2017</string>
    <string name="add_event">ADD EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>

>>>>>>> Matt-Devel
</resources>
