<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context=".course_page_shell_old">

    <Spinner
        android:id="@+id/quick_access_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        android:layout_gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_label"
            android:textColor="#FFFFFF"
            android:text="@string/course_name"
            android:textSize="16sp"
            android:layout_marginEnd="32dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_course_name_button"
            android:text="@string/edit_course_name_buttonLabel"
            android:textSize="16sp"
            android:minWidth="48dp"
            android:maxWidth="64dp"
            android:minHeight="48dp"
            android:maxHeight="64dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#FFFFFF"
            android:id="@+id/course_start_time_label"
            android:text="@string/course_start_time_editText"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#FFFFFF"
            android:id="@+id/course_end_time_label"
            android:text="@string/course_end_time_editText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="#FFFFFF"
            android:id="@+id/course_location_label"
            android:text="@string/course_location_editText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tasks_label"
            android:text="@string/tasks_label"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tasks_date_label"
            android:text="@string/tasks_date_label"
            android:textSize="18sp"
            android:layout_marginStart="128dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_task1_button"
                android:text="@string/course_task1_text"
                android:minWidth="160dp"
                android:maxWidth="160dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_task2_button"
                android:text="@string/course_task2_text"
                android:minWidth="160dp"
                android:maxWidth="160dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_task3_button"
                android:text="@string/course_task3_text"
                android:minWidth="160dp"
                android:maxWidth="160dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_task4_button"
                android:text="@string/course_task4_text"
                android:minWidth="160dp"
                android:maxWidth="160dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/course_task1_dateLabel"
                android:text="@string/course_task1_dateLabel"
                android:textSize="12sp"
                android:minWidth="160dp"
                android:maxWidth="160dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/course_task2_dateLabel"
                android:text="@string/course_task2_dateLabel"
                android:textSize="12sp"
                android:minWidth="160dp"
                android:maxWidth="160dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/course_task3_dateLabel"
                android:text="@string/course_task3_dateLabel"
                android:textSize="12sp"
                android:minWidth="160dp"
                android:maxWidth="160dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/course_task4_dateLabel"
                android:text="@string/course_task4_dateLabel"
                android:textSize="12sp"
                android:minWidth="160dp"
                android:maxWidth="160dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
